--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,59 @@
 .container {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-  }
+    display : flex;
+    width   : 100vw;
+    height  : 100vh;
+    overflow: hidden;
+}
+
+.mainContainer {
+    display         : flex;
+    flex-direction  : column;
+    width           : 100%;
+    height          : 100%;
+    background-color: #101827;
+}
+
+.cardContainer {
+    flex                 : 1;
+    display              : grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap                  : 10px;
+    padding              : 10px;
+    overflow             : auto;
+}
+
+.leftContainer {
+    display       : flex;
+    flex-direction: column;
+    width         : auto;
+}
+
+.rightContainer {
+    display       : flex;
+    flex-direction: column;
+    width         : auto;
+}
+
+.gridContainer {
+    display       : flex;
+    flex-direction: row;
+    padding       : 0 2px;
+}
+
+.chart {
+    width: calc(100% - 62px);
+    ;
+    height          : auto;
+    padding         : 0 20px;
+    border-radius   : 15px;
+    margin          : 0 10px;
+    background-color: #1d283c;
+}
+
+.halfDivs {
+    margin         : 5px 10px 5px 0;
+    display        : flex;
+    flex           : 1;
+    align-items    : center;
+    justify-content: center;
+}
